<resources>
    <string name="app_name">Realty</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="search">Новенький</string>
    <string name="present">Я уже Смешарик</string>
    <string name="Bottom">Выставить объявление</string>
    <string name="Info">Заполните ваше объявление</string>
    <string name="NameSpace1">Город</string>
    <string name="NameSpace2">Улица</string>
    <string name="NameSpace3">Адрес дома</string>
    <string name="NameSpace4">Площадь помещения (кв.м)</string>
    <string name="NameSpace5">Этаж</string>
    <string name="NameSpace6">Выставите стоимость</string>
    <string name="NameSpace7">Ваше ФИО</string>
    <string name="NameSpace8">Номер контактного телефона</string>
    <string name="NameSpace9">Комментарий</string>
    <string name="hide_text">Заполните все поля!</string>
    <string name="title_activity_maps_click">MapsClickActivity</string>
    <string name="Main1">Разместить объявление</string>
    <string name="Main2">Купить/Арендовать</string>
    <string name="title_activity_try">Tru</string>
    <string-array name="list">
        <item>Rent (Аренда)</item>
        <item>Инвестиции</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="allOff">Выключить фильтры</string>
    <string name="Ok">Применить</string>
    <string name="isBook">Не искать аренду</string>
    <string name="isInvest">Не искать инвестиции</string>
</resources>
