<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Filters">

    <Button
            android:text="@string/allOff"
            android:id="@+id/allOff"
            android:layout_width="203dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="597dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/Ok"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/Ok" tools:ignore="MissingConstraints" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/allOff" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <CheckBox
            android:text="@string/isBook"
            android:layout_width="170dp"
            android:layout_height="46dp"
            android:id="@+id/isBook" tools:ignore="MissingConstraints"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/isInvest" android:layout_marginRight="8dp"/>
    <CheckBox
            android:text="@string/isInvest"
            android:layout_width="169dp"
            android:layout_height="47dp"
            tools:layout_editor_absoluteX="142dp" android:id="@+id/isInvest" tools:ignore="MissingConstraints"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/Ok"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/isBook"
            app:layout_constraintVertical_bias="0.534"/>
</androidx.constraintlayout.widget.ConstraintLayout>