<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PresentActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="50dp"
    />
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="50dp"
    />

    <TextView
            android:id="@+id/activity_info"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintBottom_toTopOf="@id/activity_to_write2"
            android:text="@string/Info"
            android:textSize="30dp"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@color/text"
            app:layout_constraintHorizontal_bias="0.51" app:layout_constraintVertical_chainStyle="spread_inside"/>

    <Button
            android:id="@+id/activity_to_write2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background = "@drawable/button"
            android:onClick="Map_Click"
            android:text="@string/NameSpace3"
            android:textColor="@color/text"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/activity_to_write4"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/activity_info" />
    />
    <EditText
            android:id="@+id/activity_to_write4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_to_write2"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintBottom_toTopOf="@+id/activity_to_write5"
            android:hint="@string/NameSpace7"
            android:textSize="20dp"
            android:background="@drawable/fields"
            android:textColor="@color/text"
    />
    <EditText
            android:id="@+id/activity_to_write5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_to_write4"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintBottom_toTopOf="@+id/activity_to_write6"
            android:hint="@string/NameSpace4"
            android:textSize="20dp"
            android:background="@drawable/fields"
            android:textColor="@color/text"/>
    <EditText
            android:id="@+id/activity_to_write6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_to_write5"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintBottom_toTopOf="@+id/activity_to_write7"
            android:hint="@string/NameSpace5"
            android:textSize="20dp"
            android:background="@drawable/fields"
            android:textColor="@color/text"
    />
    <EditText
            android:id="@+id/activity_to_write7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_to_write6"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintBottom_toTopOf="@id/activity_to_write8"
            android:hint="@string/NameSpace6"
            android:textSize="20dp"
            android:background="@drawable/fields"
            android:textColor="@color/text"
    />
    <EditText
            android:id="@+id/activity_to_write8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_to_write7"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintBottom_toTopOf="@id/spinner"
            android:hint="@string/NameSpace8"
            android:textSize="20dp"
            android:background="@drawable/fields"
            android:textColor="@color/text"
    />
    <Spinner
            app:layout_constraintTop_toBottomOf="@id/activity_to_write8"
            app:layout_constraintBottom_toTopOf="@id/activity_to_write9"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/list"
            android:background="@drawable/fields"
    />
    <EditText
            android:id="@+id/activity_to_write9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintBottom_toTopOf="@id/activity_bottom"
            android:hint="@string/NameSpace9"
            android:textSize="20dp"
            android:background="@drawable/fields"
            android:textColor="@color/text"
    />

    <Button
            android:id="@+id/activity_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background = "@drawable/button"
            android:onClick="Click"
            android:text="@string/Bottom"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/activity_to_write9" />

</androidx.constraintlayout.widget.ConstraintLayout>